updated design with margin

--- a/index.css
+++ b/index.css
@@ -1,21 +1,29 @@
 body {
     background-image: url("Carsimage.jpeg");
+    position: relative;
     background-size: cover;
     font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
-    color: beige;
+    color: rgb(207, 176, 85);
     font-weight: bold;
     text-align: center;
     font-size: 30px;
     height: 100vh;
+    padding: 29px;
+    padding-bottom: 80px;
+    border: rgb(72, 71, 27) solid 20px;
+    max-height : 700px;
+
     
     
 }
 div {
     max-width: 500px;
     min-width: 150px;
-    margin: auto;
-    padding: 100px;
-    
+    height: 450px;
+    margin: 10px;
+    padding: 30px;
+    border:  solid  10px;
+    background:rgb(77, 73, 51);
 }
 
 h1 {
@@ -41,10 +49,10 @@ button {
 }
 
 #increment-btn {
-    background: gold;
+    background: rgb(143, 128, 44);
 }
 
 #save-btn {
-    background: turquoise;
+    background: rgb(20, 79, 73);
 }
 
