--- a/index.css
+++ b/index.css
@@ -1,13 +1,13 @@
 body {
     background-image: url("Carsimage.jpeg");
     position: relative;
-    background-size: cover;
+    background-size: contain;
     font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
     color: rgb(207, 176, 85);
     font-weight: bold;
     text-align: center;
     font-size: 30px;
-    height: 100vh;
+    height:100vh;
     padding: 29px;
     padding-bottom: 80px;
     border: rgb(72, 71, 27) solid 20px;
@@ -20,7 +20,7 @@ div {
     max-width: 500px;
     min-width: 150px;
     height: 450px;
-    margin: 10px;
+    margin: 10px auto;
     padding: 30px;
     border:  solid  10px;
     background:rgb(77, 73, 51);
